Fixed padding on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -318,9 +318,26 @@ nav {
 
 @media(max-width: 500px){
     .header {
-        padding: 60px 0;
+        padding: 100px 0;
+    }
+
+    .header .content {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .header .content > img {
+        order: -1;
+        margin-bottom: 2rem;
+        width: 100%;
+    }
+
+    .header .content .description {
+        order: 2;
+        text-align: left;
     }
 }
+
 /* End Header */
 
 
